Fix horizontal scroll on mobile

--- a/css/settings.css
+++ b/css/settings.css
@@ -20,6 +20,7 @@ body {
   font-family: "VelaSans";
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 /* Density and radius */
@@ -50,6 +51,7 @@ html {
   --desktop-viewport-max: 1500;
 
   font-size: calc(var(--mobile-font-size-min) * 1px);
+  overflow-x: hidden;
 
   @media screen and (min-width: 320px) {
     font-size: calc(var(--mobile-font-size-min) * 1px + (var(--mobile-font-size-max) - var(--mobile-font-size-min)) * ((100vw - var(--mobile-viewport-min) * 1px) / (var(--mobile-desktop-breakpoint) - var(--mobile-viewport-min))));
